# Blosm

./: README.md  blosm_pipeline.py  north_campus.blend
mdp-prototype-app/: blosm_pipeline.py  coords.txt  north_campus.blend  north_campus.blend1  package-lock.json  package.json  pyproject.toml
mdp-prototype-app/env/: pyvenv.cfg
mdp-prototype-app/mdpweb/: __init__.py
mdp-prototype-app/mdpweb/templates/: index.html
mdp-prototype-app/mdpweb/views/: __init.py  index.py
mdp-prototype-app/public/: model.glb
mdp-prototype-app/src/app/: layout.js
mdp-prototype-app/src/app/components/three/: Model.jsx  mainCanvas.jsx
mdp-prototype-app/src/mdpweb.egg-info/: SOURCES.txt  requires.txt
osm/: map_10.osm  map_11.osm  map_12.osm  map_14.osm  map_15.osm  map_16.osm  map_17.osm  map_18.osm  map_19.osm  map_2.osm  map_20.osm  map_21.osm  map_22.osm  map_24.osm  map_25.osm  map_26.osm  map_28.osm  map_29.osm  map_3.osm  map_30.osm  map_32.osm  map_33.osm  map_35.osm  map_36.osm  map_38.osm  map_39.osm  map_4.osm  map_40.osm  map_41.osm  map_42.osm  map_43.osm  map_44.osm  map_45.osm  map_46.osm  map_47.osm  map_49.osm  map_5.osm  map_50.osm  map_51.osm  map_52.osm  (+12 more)
